# monte_carlo_simulation

./: .cz.toml  .pre-commit-config.yaml  .pydocstyle  .pylintrc  CHANGE.md  README.md  main.py  pyproject.toml  run_all_checks.sh
libs/: __init__.py  strategies.py
src/: main.py
tests/: test_monte_carlo_simulation.py  test_parameters.json
