[tool.poetry]
name = "monte-carlo-simulation"
version = "0.1.0"
description = "monte carlo simulation"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
